samples/04-security/deny-ns-a-to-b.yaml
# Deny traffic from namespace "ns-a" to helloworld in "ns-b"
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: deny-ns-a-to-helloworld
  namespace: ns-b
spec:
  selector:
    matchLabels:
      app: helloworld
  action: DENY
  rules:
  - from:
    - source:
        namespaces: ["ns-a"]
